# BlackHoleVis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  vcpkg.json
app/: main.cpp
app/BlackHoleVis/: bhv_app.cpp  bhv_app.h
app/BlackHoleVis_1/: CMakeLists.txt  README.md  bhv_app.cpp  bhv_app.h  bhv_main.cpp  guiElements.cpp  guiElements.h
app/BlackHoleVis_2/: CMakeLists.txt  README.md  bhv_app.cpp  bhv_app.h  guiElements.h
app/BlackHoleVis_3/: CMakeLists.txt  README.md  bhv_app.cpp  bhv_app.h
app/KerrVis/: CMakeLists.txt  README.md  guiElements.h  kerr_app.cpp  kerr_app.h  kerr_main.cpp
app/KerrVis/hello/: hello.cpp
app/envTest/: CMakeLists.txt  CubeMapScene.cpp  CubeMapScene.h  envTest_app.cpp  envTest_app.h  envTest_main.cpp
include/: functions.hpp
include/app/: app.h
include/blacktracer/: BlackHole.h  Camera.h  Code.h  Const.h  Grid.h  Metric.h  MetricClass.h  PSHOffsetTable.h  types.h
include/cubeMapScene/: CheckerSphereScene.h  CubeMapScene.h  SolarSystemScene.h
include/gui/: gui.h  guiElement.h  gui_helpers.h
include/helpers/: RootDir.h.in  Timer.hpp  json_helper.h  uboBindings.h
include/objects/: accretionDisk.h  blackHole.h
include/rendering/: UBOCamera.h  bloom.h  buffers.h  camera.h  glBoilerplate.h  mesh.h  quad.h  schwarzschildCamera.h  shader.h  simpleCamera.h  texture.h  window.h
resources/shaders/: blackHole.frag  blackHole.fs  blackHole.vert  blackHoleTest.frag  black_hole_shader.frag  black_hole_shader.vert  black_hole_shader_color.frag  black_hole_shader_main.frag  bloom.frag  bloom_render.frag  bloom_upsample.frag  blur.comp  intersect.frag  newton.frag  simple.frag  simple.vert  squad.fs  squad.vs  starless.comp  starless.frag  starless.vert
resources/shaders/cubeMapScene/: checkerSphereMesh.fs  checkerSphereMesh.vs  cubeMesh.fs  mesh.fs  sky.fs
resources/shaders/ebruneton/: black_hole_shader.frag  black_hole_shader.glsl
resources/shaders/envTest/: mesh.fs  mesh.vs  sky.fs  sky.vs  squad.fs  squad.vs
resources/shaders/kerr/: compute.comp  makeGrid.comp  pixInterpolation.comp  render.frag  render.vert  sky.fs  sky.vs
resources/shaders/test/: defl_test_bruneton.frag  defl_test_starless.frag  disc_test_bruneton.frag  disc_test_bruneton.vert  disc_test_mueller.frag  disc_test_mueller.vert
src/: functions.cpp
src/app/: app.cpp
src/blacktracer/: Camera.cpp  Grid.cpp  MetricClass.cpp  PSHOffsetTable.cpp
src/cubeMapScene/: CheckerSphereScene.cpp  CubeMapScene.cpp  SolarSystemScene.cpp
src/gui/: gui.cpp  guiElement.cpp
src/helpers/: Timer.cpp  json_helper.cpp
src/objects/: accretionDisk.cpp  blackHole.cpp
src/rendering/: UBOCamera.cpp  bloom.cpp  camera.cpp  mesh.cpp  schwarzschildCamera.cpp  shader.cpp  simpleCamera.cpp  texture.cpp  window.cpp
